# Llama2-TPU

./: .gitignore  README.md
bmodel/: llama2_pcie  llama2_soc
compile/: compile.sh  export_onnx.py  export_onnx_fast.py  torch_inference.py
demo/: CMakeLists.txt  demo.cpp  demo_multidevice.cpp
pcie/demo/: CMakeLists.txt  demo.cpp
pcie/web_demo/: CMakeLists.txt  chat.cpp  chat.py  web_demo.py
soc/demo/: CMakeLists.txt  demo.cpp
soc/web_demo/: CMakeLists.txt  chat.py
web_demo/: CMakeLists.txt
